Thu Oct 30 10:30:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * NEWS
          Updated.

Wed Oct 29 14:25:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * DevGuideExamples/Messenger/StaticDAnCE/Messenger_StaticDAnCE.mpc
          change libpath to libpaths
          
        * DevGuideExamples/ChangeLog:
          Incorperated into this file.

Wed Oct 29 13:25:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * NEWS
          Updated.

Tue Oct 28 11:04:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * DevGuideExamples/Messenger/StaticDAnCE/Messenger_StaticDAnCE.mpc
          Add libpath += ..

Sun Oct 26 20:00:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/Messenger/StaticDAnCE/plan.h  
          Added missing include

Thu Oct 23 11:49:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DevGuideExamples/Messenger/Administrator_exec_i.h
        * DevGuideExamples/Messenger/History_exec_i.h
        * DevGuideExamples/Messenger/Messenger_exec_i.h
        * DevGuideExamples/Messenger/Publication_exec_i.h
        * DevGuideExamples/Messenger/Receiver_exec_i.h
        * DevGuideExamples/Messenger/Runnable_exec_i.h
          Don't use deprecated TAO_Local_RefCounted_Object

Wed Oct 22 16:24:21 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * Messenger/Administrator_exec_i.h:
        * Messenger/History_exec_i.h:
        * Messenger/Messenger_exec_i.h:
        * Messenger/Messenger_exec_i.cpp:
        * Messenger/Publication_exec_i.h:
        * Messenger/Runnable_exec_i.h:

          Fixed fuzz errors. When including files from ACE/TAO/CIAO, use "" instead of <>.

          Example: #include <ace/OS.h> was changed to "ace/OS.h"

Wed Oct 22 14:50:02 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * CIAO.mwc:

          Fixed fuzz errors by adding "// $Id $" to the top of each file.
